--- a/src/main/webapp/Assets/CSS/StyleSheet.css
+++ b/src/main/webapp/Assets/CSS/StyleSheet.css
@@ -1,4 +1,24 @@
-<!-- Background color -->
-body {
-    background-color: #e8edfc;
+#container {
+    width: 226px;
+    height: 274px;
+    border: 3px solid darkblue;
+    margin: auto
+}
+
+.t1, .t4 {
+    border: 1px solid black;
+    height: 48px;
+    margin-left: 3px;
+    margin-top: 3px;
+    display: inline-block;
+    text-align: center;
+    line-height: 48px;
+}
+
+.t1 {
+    width: 48px;
+}
+
+.t4 {
+    width: 219px;
 }
